fixed font shadows, made it more readable

--- a/style.css
+++ b/style.css
@@ -21,10 +21,12 @@ width: 100%;
 }
 
 #maintitle {
+    text-shadow: 2px 2px #6f6f6f;
   font-family: "Cormorant Garamond", "serif";
 }
 
 h1 {
+text-shadow: 2px 2px #6f6f6f;
 font-family:"Julius Sans One", "Raleway", "sans-serif";
 font-weight:normal;
 font-size: 55px;
@@ -34,6 +36,7 @@ margin: 0;
 padding: 0;
 }
 h2 {
+text-shadow: 2px 2px #6f6f6f;
 font-family:"Julius Sans One", "Raleway", "sans-serif";
 font-weight: normal;
 font-size: 40px;
@@ -43,6 +46,7 @@ margin: 0;
 padding: 0;
 }
 h3 {
+text-shadow: 2px 2px #6f6f6f;
 font-family:"Julius Sans One", "sans-serif";
 font-weight: normal;
 font-size: 16px;
@@ -96,25 +100,6 @@ background-size: cover;
   text-align: center;
 }
 .clear { clear: both; }
-
-button.btn-know {
-	padding: 15px 47px;
-	margin: 40px 38.8%;
-	text-align: center;
-	border: 4px solid #fff;
-	color: #fff;
-	background: transparent;
-	font-size: 19px;
-	cursor: pointer;
-	text-shadow: -1px 2px 0px rgba(90, 90, 90, 0.56);
-	-webkit-border-radius: 4px;
-	border-radius: 4px;
-}
-
-.btn-know:hover { background: #fff; color: transparent; }
-ul.built { list-style: none; margin: 0 auto; width: 730px; }
-.built li img{ float: left; padding-right: 34px; }
-
 #header {
     width: 100%;
     background: url('https://www.wallsandfloors.co.uk/admin/uploads/super%20black%20rectangle%20small.jpg');
@@ -125,12 +110,12 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
   	color: white;
 };
 
-
 #footer{
 	text-align: center;
 }
 
 #titlepage a {
+  text-shadow: 2px 2px #6f6f6f;
   color: #fff;
   text-decoration: none;
   float: left;
